@@ -20,7 +20,7 @@ Disassembly of section .text:
 0+02e <[^>]+> f89f 800c 	ldrb.w	r8, \[pc, #12\]	; 0+03c <[^>]+>
 0+032 <[^>]+> f89f 100a 	ldrb.w	r1, \[pc, #10\]	; 0+03e <[^>]+>
 0+036 <[^>]+> f81f 1038 	ldrb.w	r1, \[pc, #-56\]	; 0+000 <[^>]+>
-0+03a <[^>]+> 0000      	lsls	r0, r0, #0
+0+03a <[^>]+> 46c0      	nop			\(mov r8, r8\)
 0+03c <[^>]+> bf00      	nop
 0+03e <[^>]+> f995 1000 	ldrsb.w	r1, \[r5\]
 0+042 <[^>]+> f995 1023 	ldrsb.w	r1, \[r5, #35\]
@@ -89,7 +89,7 @@ Disassembly of section .text:
 0+126 <[^>]+> f8df 800c 	ldr.w	r8, \[pc, #12\]	; 0+134 <[^>]+>
 0+12a <[^>]+> f8df 100a 	ldr.w	r1, \[pc, #10\]	; 0+136 <[^>]+>
 0+12e <[^>]+> f85f 1036 	ldr.w	r1, \[pc, #-54\]	; 0+0fa <[^>]+>
-0+132 <[^>]+> 0000      	lsls	r0, r0, #0
+0+132 <[^>]+> 46c0      	nop			\(mov r8, r8\)
 0+134 <[^>]+> bf00      	nop
 0+136 <[^>]+> 7029      	strb	r1, \[r5, #0\]
 0+138 <[^>]+> f885 1023 	strb.w	r1, \[r5, #35\]
