@@ -1,3 +1,8 @@
+2007-06-06  Paul Brook  <paul@codesourcery.com>
+
+	* gas/arm/thumb.d: Update expected output.
+	* gas/arm/thumb2_relax.d: Ditto.
+
 2007-06-05  Paul Brook  <paul@codesourcery.com>
 
 	* gas/arm/thumb32.d: Add writeback addressing mode tests.
