@@ -1,3 +1,7 @@
+2007-06-06  Paul Brook  <paul@codesourcery.com>
+
+	* config/tc-arm.c (s_align): Pad code sections appropriately.
+
 2007-06-05  Paul Brook  <paul@codesourcery.com>
 
 	* config/tc-arm.c (insns): Correct Thumb-2 ldrd/strd opcodes.
